converted pxs to rems

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="header">
-      <!-- because img is inline elemenet, better practice to put inside container -->
+      <!-- because img is inline element, better practice to put inside container -->
       <!-- - then position container where element lives -->
       <div class="logo-box">
         <img src="img/logo-white.png" alt="Logo" class="logo" />
