--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -16,20 +16,30 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <!-- FIRST BLOCK (BEM SYSTEM) -->
+    <!-- stand alone component can stand on its own -->
     <header class="header">
+      <!-- ELEMENT double underscore-->
+      <!-- changed 'logo-box' to 'header__logo-box' because can only exist here-->
+      <!-- 'header_logo-box" cannot stand on its own  -->
       <!-- because img is inline element, better practice to put inside container -->
       <!-- - then position container where element lives -->
-      <div class="logo-box">
-        <img src="img/logo-white.png" alt="Logo" class="logo" />
+      <div class="header__logo-box">
+        <!-- ELEMENT -->
+        <img src="img/logo-white.png" alt="Logo" class="header__logo" />
       </div>
-      <div class="text-box">
+      <!-- ELEMENT -->
+      <div class="header__text-box">
+        <!-- this H1 can be a BLOCK ELEMENT (stand alone to be used elsewhere) -->
         <!-- h1 is important for SEO so put title of webpage inside -->
         <h1 class="heading-primary">
+          <!-- MODIFIERS of above block so double dash -->
           <!-- a span tag styles text differently -->
-          <span class="heading-primary-main">Outdoors</span>
-          <span class="heading-primary-sub">is where life happens</span>
+          <span class="heading-primary--main">Outdoors</span>
+          <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn-white btn-animated">Discover our tours</a>
+        <!-- BLOCK -->
+        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
   </body>
