--- a/Trillo/starter/index.html
+++ b/Trillo/starter/index.html
@@ -15,7 +15,44 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">Header part</header>
+      <header class="header">
+        <img src="img/logo.png" alt="trillo logo" class="logo" />
+        <form action="#" class="search">
+          <input type="text" class="search_input" placeholder="Search hotels" />
+          <button class="search__button">
+            <!-- svgs as icons for screen readers (they can fail on icon fonts)  -->
+            <!-- svg - scalable vector graphics -->
+            <svg class="search__icon">
+              <!-- this lets us use svg file and reference each icon on there -->
+              <!-- best way to include svgs in html is using a sprite -->
+              <!-- can only see this ons a web server -->
+              <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
+            </svg>
+          </button>
+        </form>
+        <nav class="user-nav">
+          <div class="user-nav__nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="img/sprite.svg#icon-bookmark"></use>
+            </svg>
+            <span class="user-nav__notification">7</span>
+          </div>
+          <div class="user-nav__nav__icon-box">
+            <svg class="user-nav__icon">
+              <use xlink:href="img/sprite.svg#icon-chat"></use>
+            </svg>
+            <span class="user-nav__notification">13</span>
+          </div>
+          <div class="user-nav__user">
+            <img
+              src="img/user.jpg"
+              alt="User photo"
+              class="user-nav__user-photo"
+            />
+            <span class="user-nav__user-name">Jonas</span>
+          </div>
+        </nav>
+      </header>
       <div class="content">
         <!-- sidebar mainly holds navigation -->
         <nav class="sidebar">Navigation</nav>
