--- a/Trillo/starter/index.html
+++ b/Trillo/starter/index.html
@@ -18,7 +18,11 @@
       <header class="header">
         <img src="img/logo.png" alt="trillo logo" class="logo" />
         <form action="#" class="search">
-          <input type="text" class="search_input" placeholder="Search hotels" />
+          <input
+            type="text"
+            class="search__input"
+            placeholder="Search hotels"
+          />
           <button class="search__button">
             <!-- svgs as icons for screen readers (they can fail on icon fonts)  -->
             <!-- svg - scalable vector graphics -->
