--- a/Trillo/starter/index.html
+++ b/Trillo/starter/index.html
@@ -59,8 +59,44 @@
       </header>
       <div class="content">
         <!-- sidebar mainly holds navigation -->
-        <nav class="sidebar">Navigation</nav>
-        <!-- this is the main part of the website lives -->
+        <nav class="sidebar">
+          <ul class="side-nav">
+            <li class="side-nav__item">
+              <a href="" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-home"></use>
+                </svg>
+                <span>Hotel</span>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-aircraft-take-off"></use>
+                </svg>
+                <span>Flight</span>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-key"></use>
+                </svg>
+                <span>Car Rentals</span>
+              </a>
+            </li>
+            <li class="side-nav__item">
+              <a href="" class="side-nav__link">
+                <svg class="side-nav__icon">
+                  <use xlink:href="img/sprite.svg#icon-map"></use>
+                </svg>
+                <span>Tours</span>
+              </a>
+            </li>
+          </ul>
+          <div class="legal">&copy; 2021 by trillo. All rights reserved.</div>
+          <!-- this is the main part of the website lives -->
+        </nav>
         <main class="hotel-view">Hotel View</main>
       </div>
     </div>
